--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "nodemon": "^3.0.1",
     "prisma": "^5.5.2",
     "typescript": "^5.2.2"
@@ -21,6 +22,7 @@
     "@types/multer": "^1.4.9",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
